--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ layout: default
  <br>
 
 
-    <div class="grid-33 mobile-grid-100" style="height:520px;">
-    <a class="twitter-timeline" data-width="300" data-height="500" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/shuckproduction">Tweets by shuckproduction</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div class="grid-33 mobile-grid-100" style="height:520px; width: 100%">
+    <a class="twitter-timeline" data-width="300" data-height="100%" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/shuckproduction">Tweets by shuckproduction</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
 {% for post in site.categories.blog | limit: 2 %}
